# 01-the-timekeeper

./: Cargo.toml  README.md  solver.rs
program/: Cargo.toml  README.md
program/src/: constant.rs  helpers.rs  instructions.rs  lib.rs  state.rs
program/src/instructions/: clear.rs  initialize.rs  wake.rs
solver/: package.json  solve.js
src/: constant.rs  lib.rs  proof.rs  state.rs  tests.rs
src/instructions/: clear.rs  initialize.rs  wake.rs
verify/: Cargo.toml
verify/src/: main.rs
