[package]
name = "timekeeper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "solver"
path = "solver.rs"
required-features = ["solver"]

[dependencies]
pinocchio = "0.11.2"
pinocchio-system = "0.6.1"
solana-nostd-sha256 = "0.2.0"
solana-sdk = { version = "4.0.1", optional = true }
solana-client = { version = "4.1.2", optional = true }

[dev-dependencies]
mollusk-svm = "0.14.0"
solana-sdk = "4.0.1"

[features]
solver = ["dep:solana-sdk", "dep:solana-client"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
